--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1>Kalender</h1>
+<h1>Termine</h1>
 <iframe src="https://calendar.google.com/calendar/embed?src=training.helm%40gmail.com&ctz=Europe/Berlin" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
