--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="container" id="home">
         <div class="row text-center">
       <div class="col-md-12" >
-          <h1 class="head-main"><i class="fa fa-signal fa-x"></i> Ubersentiment</h1>
+          <h1 class="head-main"><i class="fa fa-signal fa-x"></i> Konfuzios</h1>
            <h2 class="head-sub-main">Social Sentiment Analysis</h2>
           <h3 class="head-last"></h3>
           
