--- a/index.html
+++ b/index.html
@@ -438,12 +438,12 @@
                             <div class="row">
                                 <div class="col-md-6 col-sm-6">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" required="required" placeholder="Name">
+                                        <input type="text" id="name" class="form-control" required="required" placeholder="Name">
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-sm-6">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" required="required" placeholder="Email address">
+                                        <input type="text" id="mail" class="form-control" required="required" placeholder="Email address">
                                     </div>
                                 </div>
                             </div>
