--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         
         <div class="row text-center g-pad-bottom" >
                 <div class="col-md-12">
-                    <h2>We find your needle in the hay</h2>
+                    <h2>We will find your needle in the hay</h2>
 					<p>
                        The rise of social media such as blogs and social networks has fueled interest in sentiment analysis. With the proliferation of reviews, ratings, recommendations and other forms of online expression, online opinion has turned into a kind of virtual currency for businesses looking to market their products, identify new opportunities and manage their reputations. As businesses look to automate the process of filtering out the noise, understanding the conversations, identifying the relevant content and actioning it appropriately, many are now looking to the field of sentiment analysis. Further complicating the matter, is the rise of anonymous social media platforms such as 4chan and Reddit. If web 2.0 was all about democratizing publishing, then the next stage of the web may well be based on democratizing data mining of all the content that is getting published.
 					</p>
