--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
 						</div>
 					</div>	
             </div>
+		</div>
 			
+		<div class="row text-center" >
 			<div class="col-md-12 g-pad-bottom" >
 			<div class="col-md-9 col-sm-3 col-xs-6 ">
 						<div class="team-member">
