--- a/calender.html
+++ b/calender.html
@@ -1,2 +1,3 @@
 <h1>Termine</h1>
+<!-- not used currently-->
 <iframe src="https://calendar.google.com/calendar/embed?src=training.helm%40gmail.com&ctz=Europe/Berlin" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
